--- a/style.css
+++ b/style.css
@@ -9,15 +9,143 @@ html {
 }
 
 body {
-  display: grid;
-
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
 }
 
 .header {
-  border: 1px solid black;
+  color: #ffffff; /*of the fonts*/
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
 }
+
+.menu-container {
+  width: 100dvw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.texts {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 5px;
+  color: white;
+  margin-top: 3px;
+}
+
+.vl {
+  margin-right: 5px;
+  border-left: 1px solid white;
+  height: 20px;
+  position: relative;
+}
+.text1 {
+  font-size: 1.2rem;
+  font-weight: 600;
+
+  a:link {
+    text-decoration: none;
+  }
+  a:visited {
+    text-decoration: none;
+    color: white;
+  }
+  a:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  a:active {
+    text-decoration: none;
+    color: white;
+  }
+}
+
+.buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.submit_btn {
+  background-color: #191a1b;
+  color: white;
+  border: 0.5px solid white;
+  padding: 8px;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  width: 120px;
+
+  font-size: 16px;
+
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+
+.login {
+  background-color: #4c5fd5;
+  border: none;
+  color: white;
+  padding: 8px;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  width: 80px;
+
+  font-size: 16px;
+  margin-left: 8px;
+  cursor: pointer;
+
+  transition-duration: 0.4s;
+  font-size: 1.2rem;
+
+  &:hover {
+    background-color: white;
+    color: black;
+  }
+}
+
+.searchbar {
+  background-color: #dadbf1;
+  display: flex;
+  justify-content: center;
+}
+
+.sbcontainer {
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+.text2 {
+  font-size: 2.75rem;
+  font-weight: 500;
+}
+
+.search input[type="text"] {
+  padding: 10px;
+  margin-top: 4px;
+  width: 30rem;
+  height: 3.5rem;
+  border: 1px solid #4c5fd5;
+  border-radius: 2px;
+  font-size: 1.2rem;
+
+  background-image: url("search.png");
+  background-size: 20px;
+  background-position: 26rem;
+  background-repeat: no-repeat;
+
+  box-shadow: #c8c9dd 0px 8px 24px;
+}
+
 .main {
   border: 1px solid yellowgreen;
 }
