--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ body {
   font-weight: 500;
 }
 
-.search input[type="text"] {
+.search input[type="search"] {
   padding: 10px;
   margin-top: 4px;
   width: 30rem;
