--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ html {
 body {
   display: grid;
 
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .header {
@@ -22,6 +22,37 @@ body {
   border: 1px solid yellowgreen;
 }
 
-.footer {
-  border: 1px solid blue;
+footer {
+  display: flex;
+
+  align-items: center;
+  list-style: none;
+
+  padding: 0;
+
+  background-color: black;
+  text-decoration: none;
+  a:link {
+    text-decoration: none;
+    color: white;
+  }
+  a:visited {
+    text-decoration: none;
+    color: white;
+  }
+  a:hover {
+    color: white;
+    text-decoration: underline;
+  }
+  a:active {
+    text-decoration: none;
+    color: white;
+  }
+
+  article {
+    color: white;
+  }
+  button {
+    background-color: #5d7df5;
+  }
 }
