--- a/style.css
+++ b/style.css
@@ -11,17 +11,69 @@ html {
 body {
   display: grid;
 
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .header {
   border: 1px solid black;
 }
+/* Main Daniel */
 .main {
   border: 1px solid yellowgreen;
-}
+  display: flex;
 
-.footer {
-  border: 1px solid blue;
+.Liste {
+  width: 50%;
+  height: auto;
+  
+  margin-bottom: 3rem;
 }
+.table {
+  padding: 2rem;
+  margin: 2rem;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+img {height: 100px;
+  width: 100px;
+}
+.main h2 {
+  font-size: x-large;
+  font-weight: 700;
+}
+.main p {
+  font-size: x-large;
+  a:link {
+    text-decoration: none;
+  }
+    
+  a:visited {
+    text-decoration: underline;
+    color: black;
+  }
+  a:hover {
+    color: blue;
+    text-decoration: underline;
+  }
+  a:active {
+    text-decoration: un;
+    color: blue;
+  }
+
+
+}
+@media (1px < width < 700px) {
+  .table {
+    flex-direction: column;
+  }
+  .Liste {
+    width: 90%;
+  }
+}
+}
+  /* Daniel Main Ende /*
+
