--- a/style.css
+++ b/style.css
@@ -9,12 +9,10 @@ html {
 }
 
 body {
-
   display: grid;
 
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 }
 
 .header {
@@ -119,9 +117,6 @@ body {
   justify-content: center;
 }
 
-
-
-
 .sbcontainer {
   height: 150px;
   display: flex;
@@ -153,61 +148,59 @@ body {
   box-shadow: #c8c9dd 0px 8px 24px;
 }
 
-
 .main {
-  border: 1px solid yellowgreen;
   display: flex;
 
-.Liste {
-  width: 50%;
-  height: auto;
-  
-  margin-bottom: 3rem;
-}
-.table {
-  padding: 2rem;
-  margin: 2rem;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  
-}
-img {height: 100px;
-  width: 100px;
-}
-.main h2 {
-  font-size: x-large;
-  font-weight: 700;
-}
-.main p {
-  font-size: x-large;
-  a:link {
-    text-decoration: none;
-  }
-    
-  a:visited {
-    text-decoration: underline;
-    color: black;
-  }
-  a:hover {
-    color: blue;
-    text-decoration: underline;
-  }
-  a:active {
-    text-decoration: un;
-    color: blue;
-  }
-@media (1px < width < 700px) {
-  .table {
-    flex-direction: column;
-  }
   .Liste {
-    width: 90%;
+    width: 50%;
+    height: auto;
+
+    margin-bottom: 3rem;
+  }
+  .table {
+    padding: 2rem;
+    margin: 2rem;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  img {
+    height: 100px;
+    width: 100px;
+  }
+  .main h2 {
+    font-size: x-large;
+    font-weight: 700;
+  }
+  .main p {
+    font-size: x-large;
+    a:link {
+      text-decoration: none;
+    }
+
+    a:visited {
+      text-decoration: underline;
+      color: black;
+    }
+    a:hover {
+      color: blue;
+      text-decoration: underline;
+    }
+    a:active {
+      text-decoration: un;
+      color: blue;
+    }
+    @media (1px < width < 700px) {
+      .table {
+        flex-direction: column;
+      }
+      .Liste {
+        width: 90%;
+      }
+    }
   }
 }
-}
-
 
 footer {
   display: flex;
@@ -242,8 +235,4 @@ footer {
   button {
     background-color: #5d7df5;
   }
-
 }
-
- 
-
