--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ html {
 body {
   display: grid;
 
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .header {
@@ -149,6 +149,7 @@ body {
 }
 
 .main {
+  border: 1px solid yellowgreen;
   display: flex;
 
   .Liste {
@@ -191,14 +192,6 @@ body {
       text-decoration: un;
       color: blue;
     }
-    @media (1px < width < 700px) {
-      .table {
-        flex-direction: column;
-      }
-      .Liste {
-        width: 90%;
-      }
-    }
   }
 }
 
@@ -234,5 +227,13 @@ footer {
   }
   button {
     background-color: #5d7df5;
+  }
+}
+@media (1px < width < 700px) {
+  .table {
+    flex-direction: column;
+  }
+  .Liste {
+    width: 90%;
   }
 }
