--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ html {
 body {
   display: grid;
 
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
 }
 
 .header {
@@ -149,7 +149,6 @@ body {
 }
 
 .main {
-  border: 1px solid yellowgreen;
   display: flex;
 
   .Liste {
