--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ html {
 body {
   display: grid;
 
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .header {
@@ -52,6 +52,7 @@ body {
 
   a:link {
     text-decoration: none;
+    color: white;
   }
   a:visited {
     text-decoration: none;
